discussion/kv_engine/177017/177017_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Simplify FlowControl locking mechanism

The FlowControl bufferSize and pendingControl members are strictly
related, as any change to the first requires the Consumer sending a
control message to the Producer for informing the latter of the new
FlowControl setup.

Here I replace the manual locking/unlocking and pair-updates of those
members with a folly::Synchronized<T>, where T is a class that embeds
the pair-updates internally. That makes the FlowControl state update
cleaner.

Change-Id: I1e320f74894f92bb381fad82ba3b6deeb2229d08

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-04 12:33:32.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 15:20:33.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47397/ : FAILURE

Failure of GoogleTest "TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "Failed to mutateWithMeta TransportProtocols_GetSetTest_ServerRejectsLargeSizeWithXattrCompressed_McbpSsl_XattrYes_JsonYes_SnappyYes : Temporary failure (134)" thrown in the test body.
[  FAILED  ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (197 ms)
TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47397/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18623/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:101:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("total_acked_bytes", ackedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:104:18: error: no matching member function for call to "addStat" [clang-diagnostic-error]
    consumerConn.addStat("unacked_bytes", freedBytes, add_stat, c);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connhandler_impl.h:28:19: note: candidate function template not viable: no known conversion from "DcpConsumer" to "const ConnHandler" for object argument
void ConnHandler::addStat(const char* nm,
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.h:92:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<Buffer> buffer;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18623/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:101:18:
error: no matching member function for call to "addStat" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39825/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control.h:92:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21509/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21509/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20861/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20861/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17774/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20509/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19738/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28895/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8298/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
